--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,21 +1,14 @@
 name: CI
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
     tags: ['*']
-concurrency:
-  # Skip intermediate builds: always.
-  # Cancel intermediate builds: only if it is a pull request build.
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
-
+env:
+  JULIA_NUM_THREADS: 2
 jobs:
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ matrix.float }} - ${{ github.event_name }}
+    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
